--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "vue": "^2.5.9"
   },
   "dependencies": {
+    "frappe-gantt": "0.0.7",
     "laravel-echo": "^1.3.2",
-    "pusher-js": "^4.2.1"
+    "moment": "^2.19.4",
+    "pusher-js": "^4.2.1",
+    "snapsvg": "^0.5.1"
   }
 }
